fix(miniCatalog): hide horizontal overflow of mini catalog
make node id accept a step uuid

ensure first step isn't a branch before inserting placeholder

add tests for calculating position, provide a default increment amount if not specified

enhance tests for calculating position

more refactoring, updating tests

add check for if first step is not an EIP

add placeholder for missing service methods

minor fix for initial placeholder

chore(refactor): extract methods to check if step is start, middle, or end

--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -34,6 +34,12 @@
 
 /* MINI CATALOG */
 
+.miniCatalog__gallery {
+    max-height: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
 /* Mini Catalog Search */
 .miniCatalog__search.pf-c-toolbar__item {
     width: 100%;
